# tummycrypt

./: .env.example  .envrc  .gitignore  .lychee.toml  .sops.yaml  AGENTS.md  CHANGELOG.md  Cargo.toml  Containerfile  Justfile  README.md  Taskfile.yaml  deny.toml  flake.nix  rust-toolchain.toml
.cargo/: config.toml
.github/: actionlint.yaml
.github/workflows/: ci-live-storage.yml  ci.yml  container-runtime-smoke.yml  docs.yml  homebrew-install-smoke.yml  linux-package-container-smoke.yml  linux-postinstall-smoke.yml  macos-fileprovider-pkg-notarization-proof.yml  macos-fileprovider-testing-mode-pkg.yml  macos-postinstall-smoke.yml  nix-ci.yml  nix-profile-install-smoke.yml  release.yml  storage-large-restore-canary.yml  storage-posture-canary.yml
.greptile/: config.json  files.json  rules.md
.serena/: project.yml
Formula/: tcfs.rb
config/: ci-authority-policy.json  macos-fileprovider-lab.asc.json  nats-server.conf  tcfs.example.toml
config/systemd/: tcfsd.service
crates/fuse3-patched/: .cargo_vcs_info.json  Cargo.toml
crates/tcfs-auth/: Cargo.toml
crates/tcfs-auth/src/: certificate.rs  enrollment.rs  lib.rs  pam.rs  provider.rs  session.rs  totp.rs  webauthn.rs
crates/tcfs-auth/tests/: auth_flow.rs
crates/tcfs-chunks/: Cargo.toml
crates/tcfs-cli/: Cargo.toml
crates/tcfs-cli/src/: lib.rs  main.rs
crates/tcfs-cli/src/commands/: mod.rs  unsync.rs
crates/tcfs-cli/tests/: cli_parsing_test.rs  cmd_unsync_state_ordering.rs
crates/tcfs-core/: Cargo.toml
crates/tcfs-crypto/: Cargo.toml
crates/tcfs-dbus/: Cargo.toml
crates/tcfs-dbus/src/: lib.rs
crates/tcfs-file-provider/: Cargo.toml  cbindgen.toml
crates/tcfs-file-provider/src/: device_ctx.rs  direct.rs  grpc_backend.rs  lib.rs  storage_bounds.rs  uniffi_bridge.rs
crates/tcfs-file-provider/tests/: ffi_safety_test.rs
crates/tcfs-file-provider/uniffi/: tcfs_file_provider.udl
crates/tcfs-fuse/: Cargo.toml
crates/tcfs-fuse/src/: driver.rs  lib.rs
crates/tcfs-fuse/tests/: mount_roundtrip.rs
crates/tcfs-mcp/: Cargo.toml
crates/tcfs-nfs/: Cargo.toml
crates/tcfs-nfs/src/: adapter.rs  inode.rs  lib.rs  server.rs
crates/tcfs-secrets/: Cargo.toml
crates/tcfs-storage/: Cargo.toml
crates/tcfs-storage/src/: health.rs  lib.rs  operator.rs
crates/tcfs-sync/: Cargo.toml
crates/tcfs-vfs/: Cargo.toml
crates/tcfs-vfs/src/: cache.rs  driver.rs  hydrate.rs  lib.rs  negative_cache.rs  stub.rs  trash.rs  types.rs  vfs.rs
crates/tcfs-vfs/tests/: vfs_lifecycle_test.rs
crates/tcfsd/: Cargo.toml  tcfsd.service
crates/tcfsd/src/: config_loader.rs  daemon.rs  grpc.rs  lib.rs  main.rs  metrics.rs  worker.rs
crates/tcfsd/tests/: config_test.rs  ensure_dirs_test.rs  grpc_sync_status_errors.rs  metrics_test.rs  watcher_conflict_no_entry.rs
credentials/: app-store-connect.yaml  caldera-sp-keys.yaml  idp-002-shibboleth-keys.yaml
docs/: ARCHITECTURE.md  BENCHMARKS.md  CONTRIBUTING.md  PRODUCT.md  PROTOCOL.md  SECURITY.md  TIN-67_GREPTILE_CANARY.md  VISION.md  _config.yml  index.md  platform-support.md
docs/archive/: README.md  workstream-reality-check-2026-05-09.md
docs/design/: git-divergent-keep-both-2026-07-02.md  root-identity-adr-2026-07-14.md  stable-root-routing-2026-07-14.md  versioned-root-registry-status-b0a-2026-07-19.md
docs/ops/: agentic-flow-mirror-readiness-2026-05-31.md  apple-surface-status.md  claude-projects-roam-enrollment-2026-06-08.md  current-workstream-truth-2026-07-06.md  current.md  distribution-smoke-matrix.md  dotgit-as-files-conflict-corruption-2026-06-08.md  feature-objective-matrix-2026-05-09.md  fleet-deployment.md  fleet-parity-sprint-plan-2026-05-09.md  ghost-device-revocation-safety-2026-07-02.md  git-repo-canary-dogfood.md  git-roam-daily-driver-acceptance-2026-06-08.md  ios-surface-status.md  lab-host-acceptance-matrix.md  large-workdir-daily-driver-sequencing-2026-05-30.md  large-workdir-onboarding-design-2026-05-25.md  lazy-hydration-demo.md  lazy-traversal-qa-permutation-matrix-2026-05-09.md  macos-fileprovider-reality.md  macos-fileprovider-testing-mode-strategy.md  neo-honey-acceptance.md  next-workstream-queue-2026-05-09.md  odrive-parity-product-horizon.md  onprem-authority-recovery.md  operator-decision-record-2026-07-01.md  packaged-install-first-use.md  per-device-crypto-identity-design-2026-05-18.md  per-device-crypto-migration-2026-06-06.md  product-reality-and-priority.md  (+14 more)
fuzz/: Cargo.toml
fuzz/fuzz_targets/: crypto_roundtrip.rs  manifest_parse.rs  name_encrypt.rs  path_sanitize.rs
odrive-re/: README.md
scripts/: agentic-flow-mirror-inventory.py  agentic-flow-mirror-prepare.py  asc-fileprovider-lab-provision.py  evaluate-storage-large-restore-slo.sh  fleet-parity-pilot-demo.sh  git-dotgit-fsck-conflict-harness.sh  git-repo-canary.sh  git-repo-restore-proof.sh  git-roam-daily-driver-harness.sh  home-canary-linux-xr-shadow.sh  home-canary-linux-xr-storage-posture.sh  honey-backbone-preflight.sh  install-smoke.sh  large-workdir-inventory.py  lazy-hydration-desktop-honey-demo.sh  lazy-hydration-linux-demo.sh  lazy-hydration-linux-lifecycle-demo.sh  lazy-hydration-mounted-smoke.sh  linux-postinstall-smoke.sh  macos-build-pkg.sh  macos-codesign-p12-probe.sh  macos-developer-cert-match.sh  macos-fileprovider-coordinated-list.swift  macos-fileprovider-coordinated-read.swift  macos-fileprovider-lab-gatekeeper-override.sh  macos-fileprovider-neo-cleanup-packet.sh  macos-fileprovider-preflight.sh  macos-fileprovider-profile-inventory.sh  macos-fileprovider-testing-mode-dispatch.sh  macos-pkg-postinstall.sh  macos-pkg-structure-smoke.sh  macos-postinstall-smoke.sh  macos-tcfs-rollout-readiness.sh  neo-honey-conflict-demo.sh  neo-honey-delete-rename-unsynced-demo.sh  neo-honey-reverse-unsynced-rehydrate-demo.sh  neo-honey-smoke.sh  neo-honey-unsynced-rehydrate-demo.sh  neo-mounted-reverse-read-demo.sh  repo-roam-fingerprint.sh  (+64 more)
swift/: README.md
tests/e2e/: Cargo.toml
tests/e2e/src/: lib.rs
tests/e2e/tests/: blacklist_wireup.rs  encrypted_roundtrip.rs  fleet_live.rs  push_pull_roundtrip.rs  reconcile_wireup.rs  vfs_e2e.rs
(+1388 files in other folders)
