[package]
name = "tcfs-file-provider"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "tcfs C FFI bridge for macOS/iOS FileProvider extensions via cbindgen"

[lib]
crate-type = ["lib", "staticlib"]

[dependencies]
tcfs-core = { path = "../tcfs-core" }
tcfs-storage = { path = "../tcfs-storage" }
tcfs-chunks = { path = "../tcfs-chunks" }
tcfs-crypto = { path = "../tcfs-crypto" }
tcfs-sync = { path = "../tcfs-sync" }
secrecy = { workspace = true }
base64 = { workspace = true }
opendal = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde_json = { workspace = true }

[build-dependencies]
cbindgen = "0.27"
