[package]
name = "tcfs-file-provider"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "tcfs C FFI bridge for macOS/iOS FileProvider extensions via cbindgen"

[lib]
crate-type = ["lib", "staticlib"]

[features]
default = ["direct"]
## Direct S3/OpenDAL backend (current, no daemon needed)
direct = ["dep:tcfs-storage", "dep:tcfs-chunks", "dep:tcfs-crypto", "dep:tcfs-sync", "dep:opendal", "dep:secrecy", "dep:base64"]
## gRPC backend — delegates metadata/watch operations to tcfsd daemon and
## downloads file content in-process so FileProvider temp files are written by
## the extension, not by the daemon.
grpc = ["dep:tonic", "dep:tower", "dep:hyper-util", "dep:tokio-stream", "dep:futures", "dep:tcfs-storage", "dep:tcfs-chunks", "dep:tcfs-crypto", "dep:tcfs-sync", "tcfs-sync/crypto", "dep:opendal", "dep:base64"]
## UniFFI bindings for iOS (proc-macro based, no UDL needed)
uniffi = ["direct", "dep:uniffi", "dep:tcfs-auth", "dep:blake3"]

[dependencies]
tcfs-core = { path = "../tcfs-core" }
tcfs-storage = { path = "../tcfs-storage", optional = true }
tcfs-chunks = { path = "../tcfs-chunks", optional = true }
tcfs-crypto = { path = "../tcfs-crypto", optional = true }
tcfs-sync = { path = "../tcfs-sync", optional = true }
secrecy = { workspace = true, optional = true }
base64 = { workspace = true, optional = true }
opendal = { workspace = true, optional = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde_json = { workspace = true }
tonic = { workspace = true, optional = true }
tower = { workspace = true, optional = true }
hyper-util = { workspace = true, optional = true }
tokio-stream = { workspace = true, optional = true }
futures = { workspace = true, optional = true }
uniffi = { workspace = true, features = ["cli"], optional = true }
tcfs-auth = { path = "../tcfs-auth", optional = true }
blake3 = { workspace = true, optional = true }

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen/main.rs"
required-features = ["uniffi"]

[dev-dependencies]
tempfile = { workspace = true }

[build-dependencies]
cbindgen = "0.27"
uniffi = { workspace = true, features = ["build"], optional = true }
