[package]
name = "tcfs-nfs"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "tcfs NFS loopback server — FUSE-free mount via NFSv3"

[dependencies]
tcfs-vfs = { path = "../tcfs-vfs" }
nfsserve = "0.10"
opendal = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
async-trait = "0.1"
libc = "0.2"

[dev-dependencies]
tempfile = { workspace = true }
tokio-test = { workspace = true }
