[package]
name = "tcfsd"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "tcfs daemon binary"

[[bin]]
name = "tcfsd"
path = "src/main.rs"

[dependencies]
tcfs-core = { path = "../tcfs-core" }
tcfs-crypto = { path = "../tcfs-crypto" }
tcfs-secrets = { path = "../tcfs-secrets" }
tcfs-storage = { path = "../tcfs-storage" }
tcfs-sync = { path = "../tcfs-sync", features = ["nats"] }
tcfs-vfs = { path = "../tcfs-vfs" }
tcfs-nfs = { path = "../tcfs-nfs" }
tcfs-fuse = { path = "../tcfs-fuse" }
tcfs-auth = { path = "../tcfs-auth", features = ["totp", "webauthn"] }
opendal = { workspace = true }
async-nats = { workspace = true }
futures = { workspace = true }
service-manager = { workspace = true }
tonic = { workspace = true }
tokio-stream = { workspace = true }
prometheus-client = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
notify = { workspace = true }
secrecy = { workspace = true }
tempfile = { workspace = true }
blake3 = { workspace = true }
chrono = { workspace = true }
age = { workspace = true }
uuid = { workspace = true }
dirs = "6"
tcfs-dbus = { path = "../tcfs-dbus", optional = true }

[features]
default = ["fuse"]
# Enable FUSE mount support (requires fuse3 system library)
fuse = ["tcfs-fuse/fuse"]
# FUSE-T: NFS-loopback FUSE for macOS (no kernel module, uses libfuse-t.dylib)
fuse-t = ["tcfs-fuse/fuse-t"]
# NFS loopback mount (no kernel modules required, works everywhere)
nfs = []
# Enables NATS consumer worker mode (for K8s pods)
k8s-worker = []
# Enable D-Bus status interface (Linux only)
dbus = ["dep:tcfs-dbus"]

[package.metadata.deb]
maintainer = "TummyCrypt Contributors <jess@sulliwood.org>"
copyright = "2026 TummyCrypt Contributors"
license-file = ["../../LICENSE-MIT", "0"]
extended-description = """\
tcfsd is the TummyCrypt filesystem daemon — a FUSE-based, SeaweedFS-backed \
file sync service with content-defined chunking, age encryption, \
and on-demand hydration via .tc stub files."""
section = "utils"
priority = "optional"
depends = "$auto, fuse3"
assets = [
    ["target/release/tcfsd", "usr/bin/tcfsd", "755"],
]
systemd-units = { unit-name = "tcfsd", enable = false }
conf-files = ["/etc/tcfs/"]

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/tcfsd", dest = "/usr/bin/tcfsd", mode = "755" },
]

[package.metadata.generate-rpm.requires]
fuse3 = "*"
